# Idle-Farmer-Game

./: README.md  pyproject.toml
.github/workflows/: publish.yml
idle_farmer_game/: __init__.py  main.py
