[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "idle-farmer-game"
version = "0.1.0"
description = "An idle farming game built with tkinter and pygame"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["pygame"]

[project.scripts]
idle-farmer-game = "idle_farmer_game.main:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["idle_farmer_game*"]

[tool.setuptools.package-data]
idle_farmer_game = ["background.mp3"]
